syntax = "proto3";
option go_package = "aeon-grpc/protos";

message Book {
    string Id = 1;
    string Title = 2;
    string Author = 3;
    string ISBN = 4;
    string Summary = 5;
}

message GetBookRequest {
    string Id = 1;
}

message DeleteBookResponse {
    string Deleted = 1;
}

service BookService {
    rpc GetBook(GetBookRequest) returns (Book) {}
    rpc CreateBook(Book) returns (Book) {}
    rpc UpdateBook(Book) returns (Book) {}
    rpc DeleteBook(Book) returns (DeleteBookResponse) {}
}
